# project-zeus

./: .gitignore  .mcp.json  CLAUDE.md  README.md  Taskfile.yml  dg.toml  hello.py  pyproject.toml
analytics/: .gitignore  README.md  dagster.yaml  pyproject.toml
analytics/dbt_project/: profiles.yml
analytics/dbt_project/models/: exposures.yml  sources.yml
analytics/dbt_project/models/marts/: audience_density_by_lga.sql  audience_profile_by_fos.sql  emerging_occupations.sql  field_value_proposition.sql  institution_scorecard.sql  opportunity_gap_by_gender.sql  schema.yml  segment_field_affinity.sql  state_fos_demand.sql  university_course_listings.sql
analytics/dbt_project/models/staging/: stg_google_trends.sql  stg_job_vacancies_by_state.sql  stg_job_vacancies_by_state_fos.sql  stg_lga_reference.sql  stg_national_fos_preferences.sql  stg_qilt_graduate_outcomes.sql  stg_qilt_student_experience.sql  stg_satac_fos_preferences.sql  stg_vtac_fos_preferences.sql  stg_youth_population_by_lga.sql  stg_youth_population_by_state.sql
analytics/src/analytics/defs/: freshness_checks.py  resources.py
analytics/src/analytics/defs/assets/: abs_lga_reference.py  abs_population_by_lga.py  cricos_courses.py  evidence_cache.py  google_trends.py  job_market.py  job_market_occupations.py  occupation_fos_mapping.py  qilt_graduate_outcomes.py  qilt_institution_scores.py  qilt_student_experience.py  (+8 more)
projects/analytics-uk/: .gitignore  pyproject.toml
projects/analytics-uk/dbt_project/: dbt_project.yml  profiles.yml
projects/analytics-uk/dbt_project/models/: sources.yml
(+268 files in other folders)
