[project]
name = "analytics_uk"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster-duckdb-pandas>=0.28.14",
    "dagster==1.12.14",
    "dagster-dbt>=0.28.14",
    "dbt-duckdb>=1.10.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "analytics_uk"
registry_modules = [
    "analytics_uk.components.*",
]
